@@ -1,11 +1,11 @@
 ---
 {
-    "title": "Standard Deployment",
-    "language": "en"
+    "title": "湖仓一体概述",
+    "language": "zh-CN"
 }
 ---
 
-<!-- 
+<!--
 Licensed to the Apache Software Foundation (ASF) under one
 or more contributor license agreements.  See the NOTICE file
 distributed with this work for additional information
@@ -25,569 +25,421 @@ under the License.
 -->
 
 
-# Standard Deployment
+湖仓一体之前，数据分析经历了数据库、数据仓库和数据湖分析三个时代。
 
-Manually deploying a Doris cluster typically involves four steps:
+- 首先是数据库，它是一个最基础的概念，主要负责联机事务处理，也提供基本的数据分析能力。
 
-1. Check hardware and software environment: check the hardware resources available to the user and ensure compatibility with the operating system
-2. Check operating system: review the operating system parameters and configurations
-3. Plan the cluster: plan the FE and BE nodes of the cluster and estimate the required resources
-4. Deploy cluster: deploy the cluster based on the planning and configuration
-5. Verify: log in to the cluster and check if everything is right
+- 随着数据量的增长，出现了数据仓库，它存储的是经过清洗、加工以及建模后的高价值的数据，供业务人员进行数据分析。
 
-## 1. Check hardware and software environment
+- 数据湖的出现，主要是为了去满足企业对原始数据的存储、管理和再加工的需求。这里的需求主要包括两部分，首先要有一个低成本的存储，用于存储结构化、半结构化，甚至非结构化的数据；另外，就是希望有一套包括数据处理、数据管理以及数据治理在内的一体化解决方案。
 
-### Check hardware
+数据仓库解决了数据快速分析的需求，数据湖解决了数据的存储和管理的需求，而湖仓一体要解决的就是如何让数据能够在数据湖和数据仓库之间进行无缝的集成和自由的流转，从而帮助用户直接利用数据仓库的能力来解决数据湖中的数据分析问题，同时又能充分利用数据湖的数据管理能力来提升数据的价值。
 
-**CPU**
+## 适用场景
 
-When installing Doris, it is recommended to use machines that support the AVX2 instruction set to leverage its vectorization capabilities for query acceleration. 
+Doris 在设计湖仓一体时，主要考虑如下四个应用场景：
 
-Run the following command. If a result is returned, that means the machine supports the AVX2 instruction set.
+- 湖仓查询加速：Doris 作为一个非常高效的 OLAP 查询引擎，有着非常好的 MPP 向量化的分布式的查询层，可以直接利用 Doris 非常高效的查询引擎，对湖上数据进行加速分析。
 
-```SQL
-cat /proc/cpuinfo | grep avx2
+- 统一数据分析网关：提供各类异构数据源的查询和写入能力，用户利用 Doris，可以把这些外部的数据源，统一到 Doris 的源数据的映射结构上，用户在通过 Doris 去查询这些外部数据源的时候，可以提供一致的查询体验。
+
+- 统一数据集成：首先通过数据湖的数据源连接能力，能够让多数据源的数据以增量或全量的方式同步到 Doris，并且利用 Doris 的数据处理能力对这些数据进行加工。加工完的数据一方面可以直接通过 Doris 对外提供查询，另一方面也可以通过 Doris 的数据导出能力，继续为下游提供全量或增量数据服务。通过 Doris 可以减少对外部工具的依赖，可以直接将上下游数据，以及包括同步、加工、处理在内的整条链路打通。
+
+- 更加开放的数据平台：众多数据仓库有着各自的存储格式，用户如果想要使用一个数据仓库，第一步就需要把外部数据通过某种方式导入到数据仓库中才能进行查询。这样就是一个比较封闭的生态，数据仓库中数据除了数仓自己本身可以查询以外，其它外部工具是无法进行直接访问的。一些企业在使用包括 Doris 在内的一些数仓产品的时候就会有一些顾虑，比如数据是否会被锁定到某一个数据仓库里，是否还有便捷的方式进行导出。通过湖仓一体生态的接入，可以用更加开放的数据格式来管理数据，比如可以用 Parquet/ORC 格式来去存储数据，这样开放开源的数据格式可以被很多外部系统去访问。另外，Iceberg，Hudi 等都提供了开放式的元数据管理能力，不管元数据是存储在 Doris 本身，还是存储在 Hive Meta store，或者存储在其它统一元数据中心，都可以通过一些对外公开的 API 对这些数据进行管理。通过更加开放的数据生态，可以帮助企业更快地接入一个新的数据管理系统，降低企业数据迁移的成本和风险。
+
+## 基于 Doris 的湖仓一体架构
+
+Doris 通过多源数据目录（Multi-Catalog）功能，支持了包括 Apache Hive、Apache Iceberg、Apache Hudi、Apache Paimon(Incubating)、Elasticsearch、MySQL、Oracle、SQLSserver 等主流数据湖、数据库的连接访问。以及可以通过 Apache Ranger 等进行统一的权限管理，具体架构如下：
+
+
+![基于 Doris 的湖仓一体架构](/images/lakehouse-architecture.png)
+
+其数据湖的主要对接流程为：
+
+1. 创建元数据映射：Doris 通过 Catalog 获取数据湖元数据并缓存在 Doris 中，用于数据湖元数据的管理。在元数据映射过程中 Doris 除了支持传统 JDBC 的用户名密码认证外，还支持基于 Kerberos 和 Ranger 的权限认证，基于 KMS 的数据加密。
+
+2. 发起查询操作：当用户从 FE 发起数据湖查询时，Doris 使用自身存储的数据湖元数生成造查询计划，利用 Native 的 Reader 组件从外部存储（HDFS、S3）上获取数据进行数据计算和分析。在数据查询过程中 Doris 会将数据湖热点数据缓存在本地，当下次相同查询到来时数据缓存能很好起到查询加速的效果。
+
+3. 结果返回：当查询完成后将查询结果通过 FE 返回给用户。
+
+4. 计算结果入湖：当用户并不想将计算结果返回，而是需要将计算结果进一步写入数据湖时可以通过 export 的方式以标准数据格式（CSV、Parquet、ORC）将数据写回数据湖。
+
+## 核心技术
+
+在多源数据连接上 Doris 通过可扩展连接器读取外部数据。同时通过元数据缓存、数据缓存、Native Reader、IO 优化、统计信息优化等一些措施，极大加速了数据湖分析能力。
+
+### 可扩展的连接框架
+
+在数据的对接中包括元数据的对接和数据的读取。
+
+- 元数据对接：元数据对接在 FE 完成，通过 FE 的 MetaData 管理器来实现基于 HiveMetastore、JDBC 和文件的元数据对接和管理工作。
+
+- 数据读取：通过 NativeReader 可以高效的读取存放在 HDFS、对象存储上的 Parquet、ORC、Text 格式数据。也可以通过 JniConnector 对接 Java 大数据生态。
+
+
+![可扩展的连接框架](/images/connector.png)
+
+### 高效缓存策略
+
+Doris 通过元数据缓存、数据缓存和查询结果缓存来提升查询性能。
+
+**元数据缓存**
+
+Doris 提供了手动同步元数据、定期自动同步元数据、元数据订阅（只支持 HiveMetastore）三种方式来同步数据湖的元数据信息到 Doris，并将元数据存储在 Doris 的 FE 的内存中。当用户发起查询后 Doris 直接从内存中获取元数据并快速生成查询规划。保障了元数据的实时和高效。在元数据同步上 Doris 通过并发的元数据事件合并实现高效的元数据同步，其每秒可以处理 100 个以上的元数据事件。
+
+![元数据缓存](/images/metadata-syncer-for-hive-metastore.png)
+
+**高效的数据缓存**
+
+- 文件缓存：Doris 通过将数据湖中的热点数据存储在本地磁盘上，减少数据扫描过程中网络数据的传输，提高数据访问的性能。
+
+- 缓存分布策略：在数据缓存中 Doris 通过一致性哈希将数据分布在各个 BE 节点上，尽量避免节点扩缩容带来的缓存失效问题。
+
+- 缓存淘汰（更新）策略：同时当 Doris 发现数据文件对应的元数据更新后，会及时淘汰缓存以保障数据的一致性。
+
+![元数据缓存](/images/remote-file-system.png)
+
+
+**查询结果缓存和分区缓存**
+
+- 查询结果缓存：Doris 根据 SQL 语句将之前查询的结果缓存起来，当下次相同的查询再次发起时可以直接从缓存中获取数据返回到客户端，极大的提高了查询的效率和并发。
+
+- 分区缓存：Doris 还支持将部分分区数据缓存在 BE 端提升查询效率。比如查询最近 7 天的数据，可以将前 6 天的计算后的缓存结果，和当天的事实计算结果进行合并，得到最终查询结果，最大限度减少实时计算的数据量，提升查询效率。
+
+![查询结果缓存和分区缓存](/images/remote-file-system-2.png)
+
+### 高效的 Native Reader
+
+- 自研 Native Reader 避免数据转换：Doris 在数据分析时有其自身的列存方式，同时 Parquet、ORC 也有自身的列存格式。如果直接使用开源的 Parquet 或者 ORC Reader 的话就会存在一个 Doris 列存和 Parquet/ORC 列存的转换过程。这样的话就会多一次格式转换的开销，为了解决这个问题 我们自研了一套 Parquet/ORC NativeReader，直接读取 Parquet、ORC 文件来提高查询效率。
+
+- 延迟物化：同时我们实现的 Native Reader 还能很好的利用智能索引和过滤器提高数据读取效率。比如说在某些场景下我可能只针对 ID 列去做一个过滤。我们的优化做法是首先第一步我会把 ID 列单独读出来。然后在这一列上做完过滤以后，我会把这个过滤后的剩余下来的这个行号记录下来。拿这个行号再去读剩下两列，这样来进一步的减少数据扫描，加速文件的分析性能。
+
+![高效的 Native Reader](/images/native-reader.png)
+
+- 向量化读取数据：同时在文件数据的读取过程中我们引入向量化的方式读取数据，极大加速了数据读取效率。
+
+![向量化读取数据](/images/vectorized-block-reader.png)
+
+### Merge IO
+
+在网络中难免会出现大量小文件的网络 IO 请求取影响 IO 性能，在这种情况下我们采用 IO 合并去优化这种情况。
+
+比如我们设置一个策略将小于 3MB 的 IO 请求合并（Merge IO）在一次请求中处理。那么之前可能是有 8 次的小的 IO 请求，我们可以把 8 次合并成 5 次 IO 请求去去读取数据。这样减少了网络 IO 请求的速度，提高了网络访问数据的效率。
+
+Merge IO 的确定是它可能会读取一些不必要的数据，因为它把中间可能不必要读取的数据合并起来一块读过来了。但是从整体的吞吐上来讲其性能有很大的提高，在碎文件（比如：1KB - 1MB）较多的场景优化效果很明显。同时我们通过控制 Merge IO 的大小来达到整体的平衡。
+
+![Merge IO](/images/mergeIO.png)
+
+### 统计信息提高查询规划效果
+
+Doris 通过收集统计信息有助于优化器了解数据分布特性，在进行 CBO（基于成本优化）时优化器会利用这些统计信息来计算谓词的选择性，并估算每个执行计划的成本。从而选择更优的计划以大幅提升查询效率。在数据湖场景我们可以通过收集外表的统计信息来提升查询规划器的效果。
+
+统计信息的收集方式包括手动收集和自动收集。
+
+同时为了保证收集统计信息不会对 BE 产生压力，我们支持了采样收集统计信息。
+
+在一些场景下用户历史数据可能很少查找，但是热数据会被经常访问，因此我们也提供了基于分区的统计信息收集在保障热数据高效的查询效率和统计信息收集对 BE 产生负载的中间取得平衡。
+
+![统计信息提高查询规划效果](/images/CBO-Optimizer.png)
+
+## 多源数据目录
+
+多源数据目录（Multi-Catalog）功能，旨在能够更方便对接外部数据目录，以增强 Doris 的数据湖分析和联邦数据查询能力。
+
+在之前的 Doris 版本中，用户数据只有两个层级：Database 和 Table。当我们需要连接一个外部数据目录时，我们只能在 Database 或 Table 层级进行对接。比如通过 `create external table` 的方式创建一个外部数据目录中的表的映射，或通过 `create external database` 的方式映射一个外部数据目录中的 Database。如果外部数据目录中的 Database 或 Table 非常多，则需要用户手动进行一一映射，使用体验不佳。
+
+而新的 Multi-Catalog 功能在原有的元数据层级上，新增一层 Catalog，构成 Catalog -> Database -> Table 的三层元数据层级。其中，Catalog 可以直接对应到外部数据目录。目前支持的外部数据目录包括：
+
+- Apache Hive
+
+- Apache Iceberg
+
+- Apache Hudi
+
+- Elasticsearch
+
+- JDBC: 对接数据库访问的标准接口 (JDBC) 来访问各式数据库的数据。
+
+- Apache Paimon(Incubating)
+
+该功能将作为之前外表连接方式（External Table）的补充和增强，帮助用户进行快速的多数据目录联邦查询。
+
+### 基础概念
+
+- Internal Catalog
+
+    Doris 原有的 Database 和 Table 都将归属于 Internal Catalog。Internal Catalog 是内置的默认 Catalog，用户不可修改或删除。
+
+- External Catalog
+
+    可以通过 [CREATE CATALOG](../../sql-manual/sql-reference/Data-Definition-Statements/Create/CREATE-CATALOG) 命令创建一个 External Catalog。创建后，可以通过 [SHOW CATALOGS](../../sql-manual/sql-reference/Show-Statements/SHOW-CATALOGS) 命令查看已创建的 Catalog。
+
+- 切换 Catalog
+
+    用户登录 Doris 后，默认进入 Internal Catalog，因此默认的使用和之前版本并无差别，可以直接使用 `SHOW DATABASES`，`USE DB` 等命令查看和切换数据库。
+
+    用户可以通过 [SWITCH](../../sql-manual/sql-reference/Utility-Statements/SWITCH) 命令切换 Catalog。如：
+
+    ```Plain
+    SWITCH internal;
+    SWITCH hive_catalog;
+    ```
+
+    切换后，可以直接通过 `SHOW DATABASES`，`USE DB` 等命令查看和切换对应 Catalog 中的 Database。Doris 会自动通过 Catalog 中的 Database 和 Table。用户可以像使用 Internal Catalog 一样，对 External Catalog 中的数据进行查看和访问。
+
+- 删除 Catalog
+
+    可以通过 [DROP CATALOG](../../sql-manual/sql-reference/Data-Definition-Statements/Drop/DROP-CATALOG) 命令删除一个 External Catalog，Internal Catalog 无法删除。该操作仅会删除 Doris 中该 Catalog 的映射信息，并不会修改或变更任何外部数据目录的内容。
+
+### 连接示例
+
+**连接 Hive**
+
+这里我们通过连接一个 Hive 集群说明如何使用 Catalog 功能。
+
+更多关于 Hive 的说明，请参阅：[Hive Catalog](../lakehouse/datalake/hive)
+
+**1. 创建 Catalog**
+
+```sql
+CREATE CATALOG hive PROPERTIES (
+    'type'='hms',
+    'hive.metastore.uris' = 'thrift://172.21.0.1:7004'
+);
 ```
 
-If AVX2 instruction set is not supported, you can deploy Doris using the "noavx2" installation package.
+更多查看：[CREATE CATALOG 语法帮助](../../sql-manual/sql-reference/Data-Definition-Statements/Create/CREATE-CATALOG)
 
-**Memory**
+**2. 查看 Catalog**
 
-Doris does not impose strict memory limits. In a production environment, it is generally recommended to have the number of GB of memory at least four times the number of CPU cores (e.g., a machine with 16 cores should have at least 64GB of memory). With more memory space comes better performance.
-
-**Storage**
-
-When deploying Doris, data can be stored on SSDs, HDDs, or object storage.
-
-It is recommended to use SSD as the data storage in the following scenarios:
-
-- High-concurrency point queries with large data volumes.
-- High-frequency data update with large data volumes.
-
-**File system**
-
-Doris supports both ext4 and xfs file systems.
-
-**Network Card**
-
-During the computation process, Doris shards and distributes data to different instances for parallel processing, which incurs network overheads. To optimize Doris performance and minimize network overheads, it is strongly recommended to deploy Doris using 10 Gigabit Ethernet (10 GbE) or faster network cards.
-
-### Recommended servers
-
-Doris can run on servers with x86-64 architecture or ARM64 architecture.
-
-**Development and testing environment**
-
-| Module   | CPU      | Memory | Disk                | Network     | Instance (minimum) |
-| -------- | -------- | ------ | ------------------- | ----------- | ------------------ |
-| Frontend | 8+ Cores | 8+ GB  | SSD or SATA, 10+ GB | 1 or 10 GbE | 1                  |
-| Backend  | 8+ Cores | 16+ GB | SSD or SATA, 50+ GB | 1 or 10 GbE | 1                  |
-
-:::tip 
-Description:
-- In a validation testing environment, you can deploy the FE and BE on the same server.
-- It is generally recommended to deploy only **one BE instance on a single machine**. Meanwhile, you can only deploy **one** **FE** **on one machine**.
-- If you need three replicas of data, you will need at least three machines and deploy one BE instance on each of them, instead of deploying three BE instances on one single machine.
-- **The clocks of multiple servers hosting FEs must be synchronized, allowing a maximum clock deviation of 5 seconds.**
-- In a testing environment, you can also perform tests with just one BE. In the actual production environment, the number of BE instances directly affects the overall query latency.
-:::
-
-**Production environment**
-
-| Module   | CPU       | Memory | Disk                 | Network | Instance (minimum) |
-| -------- | --------- | ------ | -------------------- | ------- | ------------------ |
-| Frontend | 16+ Cores | 64+ GB | SSD or RAID, 100+ GB | 10 GbE  | 1                  |
-| Backend  | 16+ Cores | 64+ GB | SSD or SATA, 100+ GB | 10 GbE  | 3                  |
-
-:::tip 
-Description:
-- In a production environment, if the FE and BE are co-located, be mindful of resource contention issues. It is recommended to store metadata and data on separate disks.
-- BE nodes can be configured with multiple disks for storage. You can bind multiple HDDs or SSDs to a single BE instance.
-- The performance of the cluster is dependent on the resources of the BE nodes. The more BE nodes there are, the better the performance of Doris. Typically, Doris can fully leverage its performance potential with 10 to 100 machines.
-:::
-
-### Hard disk space calculation
-
-In a Doris cluster, FE is mainly responsible for metadata storage, including metadata edit log and image. The disk space of BE mainly stores data, which needs to be calculated according to business needs.
-
-| Component | Disk space description                                       |
-| --------- | ------------------------------------------------------------ |
-| FE        | Generally, the size of metadata ranges from several hundred MB to several GB. The recommended disk space is not to be less than 100GB. |
-| BE        | Doris uses LZ4 compression by default, with a compression ratio of 0.3~0.5.Disk space needs to be calculated based on the total data volume * 3 (3 data replicas)There is a need to reserve 40% disk space for background data compaction and temporary data storage. |
-| Broker    | If you want to deploy a Broker, you can usually deploy the Broker node on the same machine as the FE /BE nodes. |
-
-## 2. Check operating system
-
-### Disable swap partition
-
-When deploying Doris, it is recommended to disable the swap partition. The swap partition is used by the kernel to move some memory data to a configured swap space when it detects memory pressure. However, since the kernel's strategy may not fully understand the behavior of the application, it can significantly impact the performance of the database. Therefore, it is advisable to disable it.
-
-You can **temporarily disable** it using the following command. It will be enabled again upon the next machine boot.
-
-```SQL
-swapoff -a 
-```
-
-To **permanently disable** it, use the Linux root account to comment out the swap partition in /etc/fstab, and then reboot.
+**3. 创建后，可以通过 `SHOW CATALOGS` 命令查看 catalog：**
 
 ```Plain
-# /etc/fstab
-# <file system>        <dir>         <type>    <options>             <dump> <pass>
-tmpfs                  /tmp          tmpfs     nodev,nosuid          0      0
-/dev/sda1              /             ext4      defaults,noatime      0      1
-# /dev/sda2            none          swap      defaults              0      0
-/dev/sda3              /home         ext4      defaults,noatime      0      2
+mysql> SHOW CATALOGS;
++-----------+-------------+----------+-----------+-------------------------+---------------------+------------------------+
+| CatalogId | CatalogName | Type     | IsCurrent | CreateTime              | LastUpdateTime      | Comment                |
++-----------+-------------+----------+-----------+-------------------------+---------------------+------------------------+
+|     10024 | hive        | hms      | yes       | 2023-12-25 16:11:41.687 | 2023-12-25 20:43:18 | NULL                   |
+|         0 | internal    | internal |           | UNRECORDED              | NULL                | Doris internal catalog |
++-----------+-------------+----------+-----------+-------------------------+---------------------+------------------------+
 ```
 
-:::caution 
-It is not recommended to disable swap by setting vm.swappiness = 0 because this parameter has different semantics in different Linux kernel versions. In many cases, this will not completely disable swap. 
+- [SHOW CATALOGS 语法帮助](../../sql-manual/sql-reference/Show-Statements/SHOW-CATALOGS)
+
+- 可以通过 [SHOW CREATE CATALOG](../../sql-manual/sql-reference/Show-Statements/SHOW-CREATE-CATALOG) 查看创建 Catalog 的语句。
+
+- 可以通过 [ALTER CATALOG](../../sql-manual/sql-reference/Data-Definition-Statements/Alter/ALTER-CATALOG) 修改 Catalog 的属性。
+
+**4. 切换 Catalog**
+
+通过 `SWITCH` 命令切换到 hive catalog，并查看其中的数据库：
+
+```Plain
+mysql> SWITCH hive;
+Query OK, 0 rows affected (0.00 sec)
+
+mysql> SHOW DATABASES;
++-----------+
+| Database  |
++-----------+
+| default   |
+| random    |
+| ssb100    |
+| tpch1     |
+| tpch100   |
+| tpch1_orc |
++-----------+
+```
+
+查看更多：[SWITCH 语法帮助](../../sql-manual/sql-reference/Utility-Statements/SWITCH)
+
+**5. 使用 Catalog**
+
+切换到 Catalog 后，则可以正常使用内部数据源的功能。
+
+如切换到 tpch100 数据库，并查看其中的表：
+
+```Plain
+mysql> USE tpch100;
+Database changed
+
+mysql> SHOW TABLES;
++-------------------+
+| Tables_in_tpch100 |
++-------------------+
+| customer          |
+| lineitem          |
+| nation            |
+| orders            |
+| part              |
+| partsupp          |
+| region            |
+| supplier          |
++-------------------+
+```
+
+查看 lineitem 表的 schema：
+
+```Plain
+mysql> DESC lineitem;
++-----------------+---------------+------+------+---------+-------+
+| Field           | Type          | Null | Key  | Default | Extra |
++-----------------+---------------+------+------+---------+-------+
+| l_shipdate      | DATE          | Yes  | true | NULL    |       |
+| l_orderkey      | BIGINT        | Yes  | true | NULL    |       |
+| l_linenumber    | INT           | Yes  | true | NULL    |       |
+| l_partkey       | INT           | Yes  | true | NULL    |       |
+| l_suppkey       | INT           | Yes  | true | NULL    |       |
+| l_quantity      | DECIMAL(15,2) | Yes  | true | NULL    |       |
+| l_extendedprice | DECIMAL(15,2) | Yes  | true | NULL    |       |
+| l_discount      | DECIMAL(15,2) | Yes  | true | NULL    |       |
+| l_tax           | DECIMAL(15,2) | Yes  | true | NULL    |       |
+| l_returnflag    | TEXT          | Yes  | true | NULL    |       |
+| l_linestatus    | TEXT          | Yes  | true | NULL    |       |
+| l_commitdate    | DATE          | Yes  | true | NULL    |       |
+| l_receiptdate   | DATE          | Yes  | true | NULL    |       |
+| l_shipinstruct  | TEXT          | Yes  | true | NULL    |       |
+| l_shipmode      | TEXT          | Yes  | true | NULL    |       |
+| l_comment       | TEXT          | Yes  | true | NULL    |       |
++-----------------+---------------+------+------+---------+-------+
+```
+
+查询示例：
+
+```Plain
+mysql> SELECT l_shipdate, l_orderkey, l_partkey FROM lineitem limit 10;
++------------+------------+-----------+
+| l_shipdate | l_orderkey | l_partkey |
++------------+------------+-----------+
+| 1998-01-21 |   66374304 |    270146 |
+| 1997-11-17 |   66374304 |    340557 |
+| 1997-06-17 |   66374400 |   6839498 |
+| 1997-08-21 |   66374400 |  11436870 |
+| 1997-08-07 |   66374400 |  19473325 |
+| 1997-06-16 |   66374400 |   8157699 |
+| 1998-09-21 |   66374496 |  19892278 |
+| 1998-08-07 |   66374496 |   9509408 |
+| 1998-10-27 |   66374496 |   4608731 |
+| 1998-07-14 |   66374592 |  13555929 |
++------------+------------+-----------+
+```
+
+也可以和其他数据目录中的表进行关联查询：
+
+```Plain
+mysql> SELECT l.l_shipdate FROM hive.tpch100.lineitem l WHERE l.l_partkey IN (SELECT p_partkey FROM internal.db1.part) LIMIT 10;
++------------+
+| l_shipdate |
++------------+
+| 1993-02-16 |
+| 1995-06-26 |
+| 1995-08-19 |
+| 1992-07-23 |
+| 1998-05-23 |
+| 1997-07-12 |
+| 1994-03-06 |
+| 1996-02-07 |
+| 1997-06-01 |
+| 1996-08-23 |
++------------+
+```
+
+- 这里我们通过 `catalog.database.table` 这种全限定的方式标识一张表，如：`internal.db1.part`。
+
+- 其中 `catalog` 和 `database` 可以省略，缺省使用当前 SWITCH 和 USE 后切换的 Catalog 和 Database。
+
+- 可以通过 INSERT INTO 命令，将 Hive Catalog 中的表数据，插入到 Interal Catalog 中的内部表，从而达到导入外部数据目录数据的效果：
+
+```Plain
+mysql> SWITCH internal;
+Query OK, 0 rows affected (0.00 sec)
+
+mysql> USE db1;
+Database changed
+
+mysql> INSERT INTO part SELECT * FROM hive.tpch100.part limit 1000;
+Query OK, 1000 rows affected (0.28 sec)
+{'label':'insert_212f67420c6444d5_9bfc184bf2e7edb8', 'status':'VISIBLE', 'txnId':'4'}
+```
+
+### 列类型映射
+
+用户创建 Catalog 后，Doris 会自动同步数据目录的数据库和表，针对不同的数据目录和数据表格式，Doris 会进行以下列映射关系。
+
+对于当前无法映射到 Doris 列类型的外表类型，如 `UNION`, `INTERVAL` 等。Doris 会将列类型映射为 UNSUPPORTED 类型。对于 UNSUPPORTED 类型的查询，示例如下：
+
+假设同步后的表 schema 为：
+
+```Plain
+k1 INT,
+k2 INT,
+k3 UNSUPPORTED,
+k4 INT
+select * from table;                // Error: Unsupported type 'UNSUPPORTED_TYPE' in 'k3
+select * except(k3) from table;     // Query OK.
+select k1, k3 from table;           // Error: Unsupported type 'UNSUPPORTED_TYPE' in 'k3
+select k1, k4 from table;           // Query OK.
+```
+
+不同的数据源的列映射规则，请参阅不同数据源的文档。
+
+### 权限管理
+
+使用 Doris 对 External Catalog 中库表进行访问时，默认情况下，依赖 Doris 自身的权限访问管理功能。
+
+Doris 的权限管理功能提供了对 Catalog 层级的扩展，具体可参阅 [权限管理](../../admin-manual/privilege-ldap/user-privilege) 文档。
+
+用户也可以通过 `access_controller.class` 属性指定自定义的鉴权类。如通过指定：
+
+```
+"access_controller.class" = "org.apache.doris.catalog.authorizer.ranger.hive.RangerHiveAccessControllerFactory"
+```
+
+则可以使用 Apache Range 对 Hive Catalog 进行鉴权管理。详细信息请参阅：[Hive Catalog](../../lakehouse/datalake/hive)
+
+### 指定需要同步的数据库
+
+通过在 Catalog 配置中设置 `include_database_list` 和 `exclude_database_list` 可以指定需要同步的数据库。
+
+`include_database_list`: 支持只同步指定的多个 database，以 `,` 分隔。默认同步所有 database。db 名称是大小写敏感的。
+
+`exclude_database_list`: 支持指定不需要同步的多个 database，以 `,` 分割。默认不做任何过滤，同步所有 database。db 名称是大小写敏感的。
+
+:::tip
+- 当 `include_database_list` 和 `exclude_database_list` 有重合的 database 配置时，`exclude_database_list`会优先生效。
+
+- 连接 JDBC 时，上述 2 个配置需要和配置 `only_specified_database` 搭配使用，详见 [JDBC](../lakehouse/database/jdbc)
 :::
 
-### Check and disable system firewall
+### 元数据更新
 
-If you find different ports, try disabling the firewall to confirm whether it is the cause. If it is, open the corresponding ports for communication based on the configured ports for Doris components.
+默认情况下，外部数据源的元数据变动，如创建、删除表，加减列等操作，不会同步给 Doris。
 
-```SQL
-sudo systemctl stop firewalld.service
-sudo systemctl disable firewalld.service
+用户可以通过以下几种方式刷新元数据。
+
+#### 手动刷新
+
+用户需要通过 [REFRESH](../../sql-manual/sql-reference/Utility-Statements/REFRESH) 命令手动刷新元数据。
+
+#### 定时刷新
+
+在创建 catalog 时，在 properties 中指定刷新时间参数`metadata_refresh_interval_sec` ，以秒为单位，若在创建 catalog 时设置了该参数，FE 的 master 节点会根据参数值定时刷新该 catalog。目前支持三种类型
+
+- hms：Hive MetaStore
+
+- es：Elasticsearch
+
+- jdbc：数据库访问的标准接口 (JDBC)
+
+```Plain
+-- 设置catalog刷新间隔为20秒
+CREATE CATALOG es PROPERTIES (
+    "type"="es",
+    "hosts"="http://127.0.0.1:9200",
+    "metadata_refresh_interval_sec"="20"
+);
 ```
 
-### Configure NTP service
+#### 自动刷新
 
-Doris metadata requires a time precision of less than 5000ms, so clock synchronization is required for all machines in the cluster. This prevents metadata inconsistency from causing service abnormalities. 
-
-Typically, you can ensure clock synchronization across nodes by NTP service configuration.
-
-```SQL
-sudo systemctl start ntpd.service
-sudo systemctl enable ntpd.service
-```
-
-### Set the maximum number of open file handles
-
-Doris relies on a large number of files to manage table data. Thus, the system's limit on the number of files opened by programs needs to be increased.
-
-```SQL
-vi /etc/security/limits.conf 
-* soft nofile 1000000
-* hard nofile 1000000
-```
-
-:::caution 
-For the changes to take effect, the current user needs to log out of the current session and log back in. 
-:::
-
-### Modify the number of virtual memory areas
-
-Set the number of virtual memory areas to at least 2000000.
-
-```SQL
-sysctl -w vm.max_map_count=2000000
-```
-
-### Disable transparent huge pages
-
-It is recommended to disable transparent huge pages when deploying Doris.
-
-```SQL
-echo never > /sys/kernel/mm/transparent_hugepage/enabled
-echo never > /sys/kernel/mm/transparent_hugepage/defrag
-```
-
-## 3. Plan the cluster
-
-### Plan the ports
-
-Doris instances communicate directly over the network, requiring the following ports for normal operation. Administrators can adjust Doris ports according to their environment:
-
-| Instance | Port                   | Default Port | Communication Direction     | Description                                                  |
-| -------- | ---------------------- | ------------ | --------------------------- | ------------------------------------------------------------ |
-| BE       | be_port                | 9060         | FE --> BE                   | thrift server port on BE, receiving requests from FE         |
-| BE       | webserver_port         | 8040         | BE <--> BE                  | http server port on BE                                       |
-| BE       | heartbeat_service_port | 9050         | FE --> BE                   | heartbeat service port (thrift) on BE, receiving heartbeats from FE |
-| BE       | brpc_port              | 8060         | FE <--> BEBE <--> BE        | brpc port on BE, used for communication between BEs          |
-| FE       | http_port              | 8030         | FE <--> FEClient <--> FE    | http server port on FE                                       |
-| FE       | rpc_port               | 9020         | BE --> FEFE <--> FE         | thrift server port on FE, configuration of each FE should be consistent |
-| FE       | query_port             | 9030         | Client <--> FE              | MySQL server port on FE                                      |
-| FE       | edit_log_port          | 9010         | FE <--> FE                  | port on FE for bdbje communication                           |
-| Broker   | broker_ipc_port        | 8000         | FE --> Broker BE --> Broker | thrift server on Broker, receiving requests                  |
-
-### Plan the nodes
-
-**Plan the** **FE** **nodes**
-
-FE nodes are primarily responsible for handling user requests, query parsing and planning, metadata management, and node management.
-
-For a production cluster, it is generally recommended to deploy at least 3 FE nodes for high availability. In Doris, there are two roles of FE nodes:
-
-- Follower nodes participate in elections. If the Master node fails, an available Follower node will be selected as the new Master.
-- Observer nodes only synchronize metadata from the Leader node and do not participate in elections. They can be scaled to provide scalable metadata read services.
-
-Typically, it is advised to deploy 3 Follower nodes. In high-concurrency scenarios, you can scale the Observer nodes..
-
-**Plan the BE nodes**
-
-BE nodes are responsible for data storage and computation. In a production environment, it is common to have 3 data replicas, so it is recommended to deploy at least 3 BE nodes.
-
-BE nodes can be scaled, too. By increasing the number of BE nodes, you can improve query performance and concurrency.
-
-## 4. Deploy cluster
-
-### Deploy FE Master node
-
-**Create metadata path**
-
-Generally, FE metadata is no larger than 10GB. It is recommended to store FE metadata on a different disk than the BE node data.
-
-After extracting the installation package, there is usually a default doris-meta directory included. It is advisable to create a separate metadata directory and create a symbolic link from that directory to doris-meta. **In a production environment, it is strongly recommended to specify a separate directory instead of placing it within the Doris installation directory, preferably on a dedicated disk (preferably SSD). For testing and development environments, you can simply use the default configurations.**
-
-```SQL
-## Select a disk that is separated from the BE data storage and create the FE metadata directory.
-mkdir -p <doris_meta_created>
-
-## Create a symbolic link to the FE metadata directory.
-ln -s <doris_meta_original> <doris_meta_created>
-```
-
-**Modify FE configuration file**
-
-The FE configuration file is in the "conf" directory under the FE deployment path. Before starting the FE node, you need to modify the `conf/fe.conf` file.
-
-Here are some necessary modifications:
-
-1. Modify FE metadata directory: In the configuration file, `meta_dir` specifies the location where metadata is stored. By default, `meta_dir` is under the FE installation path. If you have created a symbolic link to the FE metadata directory, you don't need to configure `meta_dir`.
-2. Bind Cluster IP: In an environment with multiple network interfaces, you need to explicitly configure the "priority_networks".
-
-```SQL
-priority_networks = 10.1.3.0/24
-```
-
-This is a CIDR representation that specifies the IP used by the FE. In environments using FQDN, you can ignore this.
-
-3. Adjust FE Memory
-
-4. In "fe.conf", the default maximum Java heap memory is set to 8GB. It is recommended to increase it to 16GB or higher for production environments. You can adjust the maximum Java heap memory by specifying the `-Xmx` in the `JAVA_OPTS` parameter.
-
-5. ```TypeScript
-   JAVA_OPTS="-Xmx16384m -XX:+UseMembar -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=7 -XX:+PrintGCDateStamps -XX:+PrintGCDetails -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSClassUnloadingEnabled -XX:-CMSParallelRemarkEnabled -XX:CMSInitiatingOccupancyFraction=80 -XX:SoftRefLRUPolicyMSPerMB=0 -Xloggc:$DORIS_HOME/log/fe.gc.log.$DATE"
-   ```
-
-6. Modify the case sensitivity parameter `lower_case_table_names` By default, Doris is case-sensitive for table names. If you require case-insensitive table names, you need to set this during cluster initialization. Note that once the cluster initialization is completed, the table name case sensitivity cannot be changed. Please refer to the [variable](https://doris.apache.org/docs/2.0/advanced/variables/) documentation for more details on the `lower_case_table_names` setting.
-
-**Start** **FE** **process**
-
-Start FE process by executing the following command
-
-```Bash
-bin/start_fe.sh --daemon
-```
-
-After FE process is started, it runs in the background. The log files are stored by default in the `log/` directory. In the case of startup failure, you can check the error messages in `log/fe.log` or `log/fe.out`.
-
-**Check** **FE** **status**
-
-To check the FE startup status, you can connect to the Doris cluster using a MySQL client. The initial user is `root` with an empty password.
-
-```SQL
-mysql -uroot -P<fe_query_port> -h<fe_ip_address>
-```
-
-After connecting to the Doris cluster, you can use the `show frontends` command to check the status of the FE nodes. It is important to verify the following:
-
-- If "Alive" is true, the node is alive.
-- If "Join" is true, the node has joined the cluster, but it may not be currently active within the cluster (it may be disconnected).
-- If "IsMaster" is true, that means the node is the Master node.
-
-### Deploy FE cluster (optional)
-
-In a production cluster, it is recommended to deploy at least three Follower nodes. After deploying the FE Master node, you need to deploy two additional FE Follower nodes.
-
-**Create the metadata directory**
-
-Refer to the deployment of the FE Master node and create the "doris-meta" directory.
-
-**Modify** **FE** **Follower node configuration**
-
-Refer to the deployment of the FE Master node and modify the FE configuration file. In most cases, you can directly copy the configuration file from the FE Master node.
-
-**Register the New** **FE** **Follower node in the Doris cluster**
-
-Before starting the new FE node, you need to register it in the FE cluster.
-
-```SQL
-## Connect to any FE node alive
-mysql -uroot -P<fe_query_port> -h<fe_ip_address>
-
-## Register FE Follower node
-## fe_edit_log_port can be viewed in fe.conf, set to 9010 by default
-## In MySQL Client, execute ALTER SYSTEM statement
-ALTER SYSTEM ADD FOLLOWER "<fe_ip_address>:<fe_edit_log_port>"
-```
-
-If you need to add an Observer node, you can use the `ADD OBSERVER` command.
-
-```SQL
-## Register FE observer node, execute ALTER SYSTEM in MySQL Client.
-ALTER SYSTEM ADD OBSERVER "<fe_ip_address>:<fe_edit_log_port>"
-```
-
-:::note
-1. It is recommended to have an odd number of FE Follower nodes (including the Master node), with a suggested number of three to achieve high availability.
-2. When FE is deployed in a high availability mode (1 Master node, 2 Follower nodes), it is advisable to increase the scalability of the FE read services by adding an Observer FE.
-3. Typically, one FE node can handle around 10-20 BE nodes. It is recommended to keep the total number of FE nodes below 10.
-:::
-
-**Start** **FE** **Follower node**
-
-Execute the following command to start FE Follower node and synchronize metadata automatically.
-
-```Bash
-bin/start_fe.sh --helper <helper_fe_ip>:<fe_edit_log_port> --daemon
-```
-
-`helper_fe_ip` represents any node alive in the current FE cluster. The `--heper`parameter is only applied during the initial FE startup to synchronize metadata, and it is not necessary to specify it in subsequent FE restart operations.
-
-**Check Follower node status**
-
-To check the status of a Follower node, follow the same method of checking the status of the FE Master node. After registering the FE Follower node, use the `show frontends` command to view the FE node status. Unlike the Master node, the `IsMaster` status should be false for the Follower node.
-
-### Deploy BE 
-
-**Create directory**
-
-BE processes are responsible for data computation and storage. The data directories are by default under `be/storage` . In a production environment, it is common to use dedicated disks to store data, separating the BE data from the BE deployment files. BE supports distributing data across multiple disks to better utilize the I/O capabilities of the disks.
-
-```SQL
-## Create BE data storage directories on each data disk
-mkdir -p <be_storage_root_path>
-```
-
-**Modify BE configuration**
-
-The configuration file for BE is in the "conf" directory under the BE deployment path. Before starting the BE node, you need to modify the `conf/be.conf` file.
-
-1. Configure Java environment Starting from version 1.2, Doris supports Java UDF (User-Defined Function), and BE relies on the Java environment. You need to configure the `JAVA_HOME` environment variable in the operating system beforehand or specify the Java environment variable in the BE configuration file.
-
-```SQL
-## Modify Java environment variable in be/be.conf
-JAVA_HOME = <your-java-home-path>
-```
-
-2. Configure BE storage path
-
-To modify the BE storage path, you can modify the "storage_root_path" parameter. Separate multiple paths using a semicolon `;` (**Do not add a semicolon after the last directory.**)
-
-**Tiered Storage for hot and cold data**
-
-Doris supports tiered storage for hot and cold data, where cold data is stored on HDDs or object storage, and hot data is stored on SSDs.
-
-You can differentiate the directories for storing hot and cold data within a node by using HDD (for cold data directory) or SSD (for hot data directory) paths. If you don't require the hot/cold mechanism within the BE node, you only need to configure the paths without specifying the medium type. You also don't need to modify the default storage medium configuration in FE.
-
-When using the tiered storage feature, you need to specify the `medium` in the `storage_root_path` parameter.
-
-```SQL
-## In storage_root_path, use medium to specify the disk type
-## /home/disk1/doris,medium:HDD: this directory stores cold data;
-## /home/disk2/doris,medium:SSD: this directory stores hot data;
-storage_root_path=/home/disk1/doris,medium:HDD;/home/disk2/doris,medium:SSD
-```
-
-:::note
-1. When specifying the storage type for the storage path, at least one path should have the storage type set as HDD.
-2. If the storage type for a storage path is not explicitly declared, it defaults to HDD.
-3. Specifying the storage type as HDD or SSD is to differentiate the storage types for the paths. It is independent of the physical storage medium. For example, you can designate a directory on an HDD disk as SSD.
-4. The keywords for storage types, HDD and SSD, must be capitalized.
-:::
-
-6. Bind cluster IP
-
-In a multi-network interface environment, it is necessary to explicitly configure the "priority_networks". However, in an environment where FQDN is configured, the "priority_networks" can be ignored.
-
-```SQL
-priority_networks = 10.1.3.0/24
-```
-
-**Register BE node in Doris**
-
-Before starting a new BE node, you need to register the new BE node in the FE cluster.
-
-```SQL
-## Connect to any FE node alive
-mysql -uroot -P<fe_query_port> -h<fe_ip_address>
-
-## Register BE node
-## be_heartbeat_service_port can be checked from be.conf, set to 9050 by default
-## In MySQL Client, execute ALTER SYSTEM statement
-ALTER SYSTEM ADD BACKEND "<be_ip_address>:<be_heartbeat_service_port>"
-```
-
-**Start BE process**
-
-Start BE process by executing the following command:
-
-```SQL
-bin/start_be.sh --daemon
-```
-
-After BE process is started, it runs in the background. The log files are stored by default in the `log/` directory. In the case of startup failure, you can check the error messages in `log/be.log` or `log/be.out`.
-
-**Check BE status**
-
-After connecting to the Doris cluster, you can use the `show backends` command to check the status of the BE nodes. 
-
-```SQL
-## Connect to Doris cluster
-mysql -uroot -P<fe_query_port> -h<fe_ip_address>
-
-## Check BE status, execute show command in MySQL Client
-show backends;
-```
-
-Normally, you should verify the following:
-
-- If "Alive" is true, the node is alive.
-- "TabletNum" represents the number of tablets (shards) on that node. When a new node is added, data balancing occurs, and the TabletNum gradually approaches the average.
-
-### Validate cluster configuration
-
-**Log in to the database**
-
-Log in to the Doris cluster using a MySQL Client.
-
-```TypeScript
-## Connect to Doris cluster
-mysql -uroot -P<fe_query_port> -h<fe_ip_address>
-```
-
-**Check the version**
-
-Check the versions using the `show frontends` and `show backends` commands.
-
-```TypeScript
-## Check the versions of all FE instances in MySQL Client
-show frontends \G
-
-## Check the versions of all BE instances in MySQL Client
-show backends \G
-```
-
-**Modify cluster password**
-
-After creating a Doris cluster, the system automatically creates a `root` user with an empty default password. It is recommended to set a new password for the `root` user after creating the cluster.
-
-```TypeScript
-## To confirm that the current user is root, you can check the current user in the MySQL client.
-select user();
-+------------------------+
-| user()                 |
-+------------------------+
-| 'root'@'192.168.88.30' |
-+------------------------+
-
-## To modify the password for the root user, execute the "set password" command in the MySQL client.
-SET PASSWORD = PASSWORD('doris_new_passwd');
-```
-
-**Create a test table and insert data**
-
-In the newly created cluster, you can create a table and insert data into it to verify if the cluster works properly.
-
-```TypeScript
-## To create a test database, execute the "create database" statement in MySQL Client.
-create database testdb;
-
-## To create a test table, execute the "create table" statement in MySQL Client.
-CREATE TABLE testdb.table_hash
-(
-    k1 TINYINT,
-    k2 DECIMAL(10, 2) DEFAULT "10.5",
-    k3 VARCHAR(10) COMMENT "string column",
-    k4 INT NOT NULL DEFAULT "1" COMMENT "int column"
-)
-COMMENT "my first table"
-DISTRIBUTED BY HASH(k1) BUCKETS 32;
-```
-
-Doris is compatible with the MySQL protocol, so you can insert data using the "insert" statement.
-
-```TypeScript
-## To insert test data, execute the "insert into" statement in MySQL Client.
-INSERT INTO testdb.table_hash VALUES
-(1, 10.1, 'AAA', 10),
-(2, 10.2, 'BBB', 20),
-(3, 10.3, 'CCC', 30),
-(4, 10.4, 'DDD', 40),
-(5, 10.5, 'EEE', 50);
-
-## To verify the data, execute the "select" statement in MySQL Client.
-SELECT * from testdb.table_hash;
-+------+-------+------+------+
-| k1   | k2    | k3   | k4   |
-+------+-------+------+------+
-|    3 | 10.30 | CCC  |   30 |
-|    4 | 10.40 | DDD  |   40 |
-|    5 | 10.50 | EEE  |   50 |
-|    1 | 10.10 | AAA  |   10 |
-|    2 | 10.20 | BBB  |   20 |
-+------+-------+------+------+
-```
-
-## 5. FAQ
-
-### What is priority_networks?
-
-Doris processes listen to network segments represented in CIDR format for IP addresses. If the deployed machines only have one network segment, no configuration is needed. However, if there are two or more network segments, it is essential to configure them.
-
-This parameter is mainly used to help the system select the correct network card IP as its listening IP. For example, if the required listening IP is 192.168.0.1, you can set `priority_networks=192.168.0.0/24`. The system will automatically scan all IPs on the machine, and only those matching the 192.168.0.0/24 network segment will be used as service listening addresses. You can also configure multiple CIDR network segments in this parameter, such as `priority_networks = 10.10.0.0/16; 192.168.0.0/24`.
-
-:::tip 
-**Why use priority_networks to configure listening address segments instead of directly setting the listening IP address in the configuration file?**
-
-The main reason is that Doris is a distributed cluster, and the same configuration file will be deployed on multiple nodes. To facilitate deployment, updates, and maintenance, it is desirable to keep all nodes' configuration files consistent. By configuring the listening address segment and then starting the system, the appropriate listening IP can be found based on this network segment, thus each machine can use a single value in this configuration. 
-:::
-
-### Why do new BE nodes need to be manually added to the cluster?
-
-After the BE node is started, you need to send a command to the FE through the MySQL protocol or the built-in web console to join the BE node to the cluster.
-
-:::tip 
-**How does the FE know which BE nodes constitute the cluster?**
-
-As a distributed database, Doris generally has many BE nodes. Doris adds BE nodes to the cluster by sending commands to the FE. This is different from the way how BE nodes know the addresses of FE nodes and then actively report connections. The way of manual adding and having the FE actively connect to BE nodes is beneficial to cluster management in many aspects. For example, it can determine which nodes constitute the cluster and it can proactively shut down a BE node that cannot be connected to. 
-:::
-
-### How to quickly detect whether the FE has started successfully?
-
-You can use the following command to check if the FE has started successfully.
-
-```Bash
-# Retry the following command, if it returns "msg":"success"，the FE has started successfully.
-server1:apache-doris/fe doris$ curl http://127.0.0.1:8030/api/bootstrap
-{"msg":"success","code":0,"data":{"replayedJournalId":0,"queryPort":0,"rpcPort":0,"version":""},"count":0}
-```
-
-### Does Doris provide built-in Web UI?
-
-Doris FE has a built-in Web UI. Users do not need to install a MySQL client to perform tasks such as adding BE/FE nodes or running other SQL queries.
-
-To access the Web UI, simply enter the URL in a web browser: http://fe_ip:fe_port, for example, [http://172.20.63.118:8030](http://172.20.63.118:8030/). This will open the built-in Web console of Doris.
-
-The built-in Web console is primarily intended for use by the root account of the cluster. By default, the root account password is empty after installation.
-
-![web-login-username-password](/images/web-login-username-password.png)
-
-For example, you can execute the following command in the Playground to add a BE node.
-
-```SQL
-ALTER SYSTEM ADD BACKEND "be_host_ip:heartbeat_service_port";
-```
-
-![Doris-Web-UI-Playground-en](/images/Doris-Web-UI-Playground-en.png)
-
-:::tip 
-For successful execution of statements that are not related to specific databases/tables in the Playground, it is necessary to randomly select a database from the left-hand database panel. This limitation will be removed later. 
-:::
-
-### Why can't I change the root password via the Web UI?
-
-The current built-in web console cannot execute SET type SQL statements. Therefore, in the web console, you cannot change the root password using statements like `SET PASSWORD FOR 'root' = PASSWORD('your_password')`. You can use MySQL Client to change the password for the root account.
+自动刷新目前仅支持 [Hive Catalog](../lakehouse/datalake/hive)。
